Fixed issue with input size changing because of missing border on contacts page.

--- a/scss/src/pages/_contact.scss
+++ b/scss/src/pages/_contact.scss
@@ -35,7 +35,7 @@
 
             &:focus {
                 box-shadow: none;
-                border: none;
+                border-color: theme-color('light-gray');
             }
         }
 
